--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,3 +15,10 @@
     width: 100%;
     height: 700px;
 }
+
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
